2002-01-27  Seth Nickell  <snickell@stanford.edu>

	* defaulttable.h:
	* interface.c: (create_main_window):

	Change name to "System Monitor" as per the menu entry.
	
2002-01-26  Kevin Vandersloot <kfv101@psu.edu>

	* Makefile.am, procman.c, defaulttable.h: use procman.png
	and just copy gnome-monitor.png

2002-01-26  Kevin Vandersloot <kfv101@psu.edu>

	* procman.c: add some sanity checks if gconf doesn't return any
	default values and or the values are broken. Fixes bug
	#69144. 

	* interface.c: move settings preferences to edit/prefs and
	hidden processes accordingly

2002-01-23  Havoc Pennington  <hp@pobox.com>

	* proctable.c (insert_info_to_tree): always set COL_POINTER first, 
	so that the sort function will always get a valid pointer 
	in this column.

2002-01-11  Havoc Pennington  <hp@pobox.com>

	* proctable.c (sort_ints): handle case where ints are equal, 
	ensures that we maintain proper semantics for the sort function
	(that if a > b, b < a; if a and b are equal, the return val 
	can't depend on order the args are passed in)

2002-01-19  Kevin Vandersloot <kfv101@psu.edu>

	* infoview.c: don't put command lable in event box

2002-01-19  Kevin Vandersloot <kfv101@psu.edu>

	* procman.c: 
	* defaulttable.h:
	use gnome-monitor for the window icon

	* Makefile.am: remove procman.png

2002-01-15  Kevin Vandersloot <kfv101@psu.edu>

	* Makefile.am: call gconftool-2 and remove unneded tab spaces

2002-01-12  Kevin Vandersloot <kfv101@psu.edu>

	* Makefile.am: small fix for the schemas file for making rpms

2002-01-10  Kevin Vandersloot <kfv101@psu.edu>

	* Makefile.am: dist the schemas file

2002-01-07  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: add options to show or not the warning dialogs
	when hiding/killing processes in the prefs dialog. Also some
	ui cleanups of the dialog

2002-01-06  Kevin Vandersloot <kfv101@psu.edu>

	* procman.c: save the colors as hex values

	* callbacks.c, procdialogs.c: same here
