@@ -1,5 +1,14 @@
 2002-01-27  Seth Nickell  <snickell@stanford.edu>
 
+	* Makefile.am:
+	* gnome-system-monitor.schemas:
+	* procman.schemas:
+
+	Rennaming application binaries to match their
+	name in the menus in order to reduce user confusion. 
+	
+2002-01-27  Seth Nickell  <snickell@stanford.edu>
+
 	* defaulttable.h:
 	* interface.c: (create_main_window):
 
